# prunefl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  License  Makefile  Readme.md  configure  default.nix  flake.nix
.github/workflows/: release.yml  test.yml
include/: driver.hh  file.hh
misc/: file2utf8z.py  version_to_cpp.py
src/: driver.cc  file.cc  main.cc
test/: CMakeLists.txt  run_test  verify_unused.py
test/complex/: defs.sv  file_list.f  mod_a.sv  mod_c.sv  mod_d.sv  pkg1.sv  top_module.sv
test/mvp_model/: core_logic.v  module_a.v  module_b.v  mvp_model.f  top.v
test/mvp_model/headers/: common.vh  macros.vh
test/test_cli_define/: list.f  module_b.v  top.v
test/test_extern/: class.sv  impl.sv  list.f  module.sv
test/test_incdir/: dummy.v  list.f  module_b.v  top.v
test/test_incdir/includes/: macros.vh
test/test_libmap/: flags.f  list.f  my_cache.json  pruned.f
test/test_libmap/lib/: lib.map  mylib1.sv  mylib2.sv
test/test_libmap/rtl/: top.sv
test/test_macros/: core_logic.v  list.f  top.v  utils.v
test/test_modules/: a_pkg.sv  b_pkg.sv  list.f  top_module.sv
test/test_no_list/: test.v
test/test_packages/: config_pkg.sv  defs.sv  extra_mod.sv  mod_a.sv  mod_b.sv  mod_d.sv  pkg2.sv  pkg3.sv  top_module.sv  wrapper_module.sv
test/test_peerdeps/: list.f  set_a.sv  set_b.sv
test/test_timescales/: a.sv  b.sv  list.f  unused.txt
